mv google account to dev mode

--- a/app/templates/menu.tmpl
+++ b/app/templates/menu.tmpl
@@ -40,11 +40,12 @@
           </u1>
         </div>
       </li>
-    <li style="padding-right:0px" title="Login with Google" data-toggle="tooltip" data-placement="right" id="menuUser" class="mainWinOnly httpsOnly">
+    <div id="devMode" style="display:none"> 
+    <li style="padding-right:0px"  title="Login with Google" data-toggle="tooltip" data-placement="right" id="menuUser" class="mainWinOnly httpsOnly">
         <span id="login" class="glyphicon glyphicon-log-in" >
     </li>
     <li style="padding-right:0px" class="mainWinOnly httpsOnly" data-toggle="tooltip" data-placement="right" id="menuUser1" title="Session in Google Sheet">
-        <image id="picture" class="mainWinOnly" style="height:18px;width:18px;margin:7px 4px"></image>
+    <image id="picture" class="mainWinOnly" style="height:18px;width:18px;margin:7px 4px"></image>
     <div class="frame">
       <ul>
       <li id="setSheetId" title="Set a google sheet id to host sessions" data-toggle="tooltip" data-placement="bottom" ><span class="glyphicon glyphicon-cog"></span> Set Session Sheet Id</li>
@@ -56,7 +57,8 @@
       <li id="logout" title="Logout" data-toggle="tooltip" data-placement="bottom" ><span class="glyphicon glyphicon-log-out" title="logout"></span> Log Out</li>
       </ul>
     </div>
-</li>
+    </li>
+    </div>
 </ul>
 <ul id="extWinNav">
 </ul>
